# ByteScissor

./: .gitignore  CMakeLists.txt  fileMerger.cpp  fileMerger.h  fileSplitter.cpp  fileSplitter.h  main.cpp  polyfier.cpp  polyfier.h  randomMaker.cpp  randomMaker.h  readme.md  test.cpp  unpolyfier.cpp  unpolyfier.h
